image staging, working on box postioning

--- a/Week 1/day2classwork.html
+++ b/Week 1/day2classwork.html
@@ -57,20 +57,27 @@
         width: 15%;
         height: 30%;
         /* border: solid black; */
-        position: absolute;
+        /* position: absolute; */
         margin-top: 100px;
         margin-left: 20%;
+        display: inline-block;
       }
       box-right {
         width: 15%;
         height: 30%;
         border: solid black;
-        position: absolute;
+        /* position: absolute; */
         margin-top: 100px;
-        margin-left: 60%;
+        margin-left: 30%;
+        display: inline-block;
       }
       .link-coloring {
         color: #4e598c;
+      }
+      .image {
+        width: 400px;
+        display: block;
+        margin: auto;
       }
     </style>
   </head>
@@ -113,19 +120,13 @@
         <li>link four</li>
       </ul>
     </box-right>
-    <p class="textformat-body">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor
-      fermentum luctus. Quisque iaculis sit amet lacus quis aliquam. Proin
-      aliquam pulvinar elementum. Nulla congue nec mauris eget viverra. Maecenas
-      ac turpis turpis. Nam eget ex eros. Ut a blandit leo. Nullam sit amet
-      faucibus dui, sed suscipit turpis. Vivamus facilisis orci lacus, ac
-      fermentum nisl euismod quis. Curabitur facilisis, mauris sed egestas
-      eleifend, est ante ultrices velit, a dignissim libero eros sit amet massa.
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-      cubilia curae; Etiam viverra viverra lacus, nec malesuada magna dignissim
-      facilisis. Duis ultricies lacinia ligula nec euismod. Duis in turpis sed
-      eros efficitur varius a et nulla.
-    </p>
+    <!-- <p class="textformat-body">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
+      accusamus consectetur blanditiis similique voluptates distinctio a soluta.
+      Asperiores quidem porro magni fugiat odio necessitatibus deserunt,
+      quibusdam ipsam quia expedita voluptas!
+    </p> -->
+    <img src="C:\Users\gabei\Downloads\nowherewhite.jpg" class="image" />
     <br />
     <br />
     <br />
