--- a/Week 1/day4classwork_hungrybear.html
+++ b/Week 1/day4classwork_hungrybear.html
@@ -31,10 +31,10 @@
         <div class="text-wrap text-center">FIX IMAGE AND PUT IT HERE</div>
       </div>
       <!-- nav menu -->
-      <!-- <div class="container">
+      <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button
               class="navbar-toggler"
               type="button"
@@ -48,15 +48,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Our Fish</a
+                >
+                <a class="nav-link" href="#">Conservation</a>
+                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link disabled">Contact Us</a>
               </div>
             </div>
           </div>
         </nav>
-      </div> -->
+      </div>
       <!-- Body Main -->
       <div class="container d-flex">
         <!-- Currently Available -->
