nav bar no shrink, justify center in page

--- a/Week 1/day4classwork_hungrybear.html
+++ b/Week 1/day4classwork_hungrybear.html
@@ -31,9 +31,9 @@
         <div class="text-wrap text-center">FIX IMAGE AND PUT IT HERE</div>
       </div>
       <!-- nav menu -->
-      <div class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container-fluid">
+      <div class="container-fluid d-flex justify-content-evenly">
+        <nav class="navbar navbar-expand bg-light">
+          <div class="container">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button
               class="navbar-toggler"
@@ -48,12 +48,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a
+                  class="nav-link active text-wrap text-center"
+                  aria-current="page"
+                  href="#"
                   >Our Fish</a
                 >
-                <a class="nav-link" href="#">Conservation</a>
-                <a class="nav-link" href="#">About Us</a>
-                <a class="nav-link disabled">Contact Us</a>
+                <a class="nav-link text-wrap text-center" href="#"
+                  >Conservation</a
+                >
+                <a class="nav-link text-wrap text-center" href="#">About Us</a>
+                <a class="nav-link text-wrap text-center" href="#"
+                  >Contact Us</a
+                >
               </div>
             </div>
           </div>
