add images, flex direction change for fish info

--- a/Week 1/day4classwork_hungrybear.html
+++ b/Week 1/day4classwork_hungrybear.html
@@ -27,11 +27,12 @@
       .flex-direction-row {
         flex-direction: row;
       }
-      @media (max-width: 720px) {
+      @media (max-width: 992px) {
         .flex-direciton-column {
           flex-direction: column;
         }
       }
+     
     </style>
   </head>
   <body>
@@ -41,7 +42,7 @@
       <div
         class="container-fluid d-flex flex-row border justify-content-evenly flex-basis-20pct"
       >
-        <div class="text-wrap text-center">Hungry Bear Fisheries</div>
+        <h1 class="text-wrap text-center">Hungry Bear Fisheries</h1>
         <div class="text-wrap text-center">FIX IMAGE AND PUT IT HERE</div>
       </div>
       <!-- nav menu -->
@@ -80,6 +81,7 @@
           </div>
         </nav>
       </div>
+      <br />
       <!-- Body Main -->
       <div
         class="container-fluid d-flex flex-direction-row flex-direciton-column"
@@ -87,6 +89,7 @@
         <!-- Currently Available -->
         <div class="text-center flex-basis-onethird">
           <h2>Currently Available</h2>
+          <br />
           <ul>
             <li>fish 1</li>
             <li>fish 2</li>
@@ -99,25 +102,39 @@
         <div
           class="d-flex flex-column flex-basis-twothirds text-center justify-content-evenly"
         >
-          <div class="container-fluid flex-basis-onethird">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eos
-            temporibus incidunt, corrupti obcaecati earum eum corporis
-            blanditiis reprehenderit eius fuga maxime tenetur voluptatum
-            voluptatem? Voluptas culpa soluta ad amet.
+          <div class="container d-flex flex-direction-row flex-direciton-column flex-basis-onethird">
+            <img
+              class="img-fluid flex-basis-onethird"
+              src="D:\VS Code Files\Code Academy\Week 1\thursday-classwork-images\atlantic.jfif"
+            />
+            <p class="flex-basis-twothirds">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eos
+              temporibus incidunt, corrupti obcaecati earum eum corporis
+              blanditiis reprehenderit eius fuga maxime tenetur voluptatum
+              voluptatem? Voluptas culpa soluta ad amet.
+            </p>
           </div>
-          <div class="container-fluid flex-basis-onethird">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus
-            ipsam, accusamus corrupti deserunt commodi maiores autem rem officia
-            reprehenderit mollitia deleniti iusto possimus tenetur voluptate
-            magni, minus maxime ullam in.
-          </div>
-          <div class="container-fluid flex-basis-onethird">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad magnam
-            expedita quasi culpa asperiores, minima, laborum praesentium magni
-            voluptatem consectetur suscipit ab porro eaque eos corrupti, a
-            adipisci unde perferendis?
-          </div>
+          <div class="container d-flex flex-direction-row flex-direciton-column flex-basis-onethird">
+            <img
+              class="img-fluid flex-basis-onethird"
+              src="D:\VS Code Files\Code Academy\Week 1\thursday-classwork-images\coho.jpg"
+            />
+            <p class="flex-basis-twothirds">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eos
+              temporibus incidunt, corrupti obcaecati earum eum corporis
+              blanditiis reprehenderit eius fuga maxime tenetur voluptatum
+              voluptatem? Voluptas culpa soluta ad amet.
         </div>
+        <div class="container d-flex flex-direction-row flex-direciton-column flex-basis-onethird">
+            <img
+              class="img-fluid flex-basis-onethird"
+              src="D:\VS Code Files\Code Academy\Week 1\thursday-classwork-images\rainbow.jpg"
+            />
+            <p class="flex-basis-twothirds">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eos
+              temporibus incidunt, corrupti obcaecati earum eum corporis
+              blanditiis reprehenderit eius fuga maxime tenetur voluptatum
+              voluptatem? Voluptas culpa soluta ad amet.
       </div>
       <!-- Footer -->
       <div class="container header d-flex flex-row"></div>
