--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -11,7 +11,36 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Index/ Home</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Page -->
+    <div class="container-fluid d-flex flex-column">
+      <!-- Header -->
+      <header
+        class="border container-fluid d-flex flex-row justify-content-evenly flex-basis-20"
+      >
+        <div
+          class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
+        >
+          <h1 class="text-wrap text-center align-middle">House of Junk</h1>
+        </div>
+        <div
+          class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
+        >
+          <img
+            src="https://via.placeholder.com/150"
+            alt="placeholder header"
+            id="placeholder header"
+            title="gray box, 150x150 base"
+            style="display: block"
+            class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>
+      </header>
+      <!-- Nav -->
+      <!-- Main Body -->
+      <!-- Footer -->
+    </div>
+  </body>
 </html>
