--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -39,6 +39,37 @@
         </div>
       </header>
       <!-- Nav -->
+      <div class="container-fluid d-flex justify-content-evenly border">
+        <nav class="navbar navbar-expand">
+          <div class="container">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-control="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggle-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarAltMarkup">
+              <div class="navbar-nav">
+                <a
+                  class="nav-link text-wrap text-center"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+                <a class="nav-link text-wrap text-center" href="#">For Sale</a>
+                <a class="nav-link text-wrap text-center" href="#"
+                  >Contact Us</a
+                >
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
       <!-- Main Body -->
       <!-- Footer -->
     </div>
