--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" type="text/css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+    crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
     <title>Contact</title>
   </head>
   <body>
@@ -43,22 +43,12 @@
     <div class="container-fluid d-flex justify-content-evenly border">
       <nav class="navbar navbar-expand">
         <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-control="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggle-icon"></span>
-          </button>
+         
           <div class="collapse navbar-collapse" id="navbarAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link text-wrap text-center" href="#">Home</a>
-              <a class="nav-link text-wrap text-center" href="#">For Sale</a>
-              <a class="nav-link text-wrap text-center" aria-current="page" href="#"
+              <a class="nav-link text-wrap text-center" href="./index.html">Home</a>
+              <a class="nav-link text-wrap text-center" href="./for-sale.html">For Sale</a>
+              <a class="nav-link text-wrap text-center nav-current-page-color" aria-current="page" href="#"
                 >Contact Us</a
               >
             </div>
