index page body layout

--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -59,7 +59,31 @@
           </div>
         </nav>
       </div>
-      <!-- Main Body -->
+      <!-- Body -->
+      <div class="border container-fluid d-flex flex-direction-772-column">
+        <!-- Main -->
+        <div class="border container d-flex flex-row flex-wrap flex-basis-66 justify-content-evenly text-center">
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, provident fuga! Reiciendis quam tenetur amet suscipit accusamus dolores maxime adipisci corporis nulla praesentium nihil officia distinctio labore consequuntur, similique temporibus?</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum praesentium at veniam iste, culpa nam molestias ullam obcaecati architecto mollitia itaque quod voluptas maxime nemo velit quo. Laboriosam, molestiae eius.</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti reiciendis hic qui exercitationem. Temporibus, laudantium aperiam? Ut nesciunt consequuntur quisquam blanditiis obcaecati pariatur ab omnis. Exercitationem tempore sit veniam nesciunt!</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nostrum reprehenderit temporibus id delectus, architecto nobis laboriosam quae totam repellat officiis necessitatibus, culpa placeat labore itaque reiciendis animi cumque deserunt?</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perspiciatis aspernatur consectetur, alias enim rem minima modi vero cumque neque esse illo eveniet, sequi reprehenderit dolorum dolor accusantium aperiam eius?</div>
+          <div class="border flex-basis-20">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum iure sequi voluptas temporibus quae dolorem dicta amet ut corrupti quasi cupiditate, quas asperiores id ducimus vero veniam, nihil earum a!</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, inventore est harum dolorum ad id voluptatum in perferendis amet nemo praesentium pariatur quam illum, nesciunt iste labore veritatis consectetur cumque.</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, necessitatibus omnis iste ex repellendus animi repellat atque officiis nemo quae. Reiciendis dolores ipsa illo ducimus itaque rem praesentium exercitationem placeat!</div>
+          <div class="border flex-basis-20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolor doloribus voluptatum cum hic earum, at mollitia labore quidem nam libero expedita quis tenetur maxime atque nesciunt ut. Excepturi, saepe?</div>
+          <div class="border flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iusto, fugiat aut obcaecati laboriosam quaerat odio perspiciatis, iure reprehenderit, nulla vel quo labore tenetur soluta cupiditate officia! Eaque, quasi tempora.</div>
+        </div>
+        <!-- Side -->
+        <div class="border container d-flex flex-column flex-basis-33 justify-content-evenly text-center">
+          <div class="border flex-basis-20">side content word </div>
+             <div class="border flex-basis-20">side content word word </div>
+            <div class="border flex-basis-20">side content word word word </div>
+           <div class="border flex-basis-20">side content word word word word </div>
+          <div class="border flex-basis-20">side content word word word word word </div>
+        </div>
+      </div> 
+        
       <!-- Footer -->
     </div>
   </body>
