footer images and sizing

--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -57,5 +57,31 @@
       </div>
     <!-- Main Body -->
     <!-- Footer -->
+    <br>
+    <footer class="border d-flex flex-row justify-content-evenly" style="max-height: 80px;">
+      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+        <img
+          src="https://via.placeholder.com/50"
+          alt="placeholder footer 1"
+          id="placeholder footer 1"
+          title="gray box, 50x50 base"
+          style="display: block"
+          class="img-fluid text-wrap text-center align-middle"
+        />
+      </div>
+      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+        <h4 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
+      </div>
+      <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+        <img
+          src="https://via.placeholder.com/50"
+          alt="placeholder footer 2"
+          id="placeholder footer 2"
+          title="gray box, 50x50 base"
+          style="display: block"
+          class="img-fluid text-wrap text-center align-middle"
+        />
+      </div>
+    </footer>
   </body>
 </html>
