--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -59,6 +59,7 @@
           </div>
         </nav>
       </div>
+      <br>
       <!-- Body -->
       <div class="border container-fluid d-flex flex-direction-772-column">
         <!-- Main -->
@@ -83,8 +84,32 @@
           <div class="border flex-basis-20">side content word word word word word </div>
         </div>
       </div> 
-        
       <!-- Footer -->
+      <footer class="border d-flex flex-row justify-content-evenly" style="max-height: 80px;">
+        <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder footer 1"
+            id="placeholder footer 1"
+            title="gray box, 50x50 base"
+            style="display: block"
+            class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>
+        <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+          <h4 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
+        </div>
+        <div class="border container-fluid d-flex flex-basis-33 justify-content-evenly">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder footer 2"
+            id="placeholder footer 2"
+            title="gray box, 50x50 base"
+            style="display: block"
+            class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>
+      </footer>
     </div>
   </body>
 </html>
