for sale page frame

--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -55,7 +55,35 @@
           </div>
         </nav>
       </div>
-    <!-- Main Body -->
+    <!-- Body -->
+    <div class="border container-fluid d-flex flex-direction-772-column">
+      <!-- Menu -->
+      <div class="border d-flex flex-column text-center" style="min-width: 150px;">
+        <a href="#item0">Item 0</a>
+        <a href="#item1">Item 1</a>
+        <a href="#item2">Item 2</a>
+        <a href="#item3">Item 3</a>
+        <a href="#item4">Item 4</a>
+        <a href="#item5">Item 5</a>
+        <a href="#item6">Item 6</a>
+        <a href="#item7">Item 7</a>
+        <a href="#item8">Item 8</a>
+        <a href="#item9">Item 9</a>    
+      </div>
+      <!-- Item List -->
+      <div class="border d-flex flex-row flex-wrap flex-direction-772-column">
+        <div id="item0" class="border d-flex flex-row ">item0</div>
+        <div id="item1" class="border d-flex flex-row ">item1</div>
+        <div id="item2" class="border d-flex flex-row ">item2</div>
+        <div id="item3" class="border d-flex flex-row ">item3</div>
+        <div id="item4" class="border d-flex flex-row ">item4</div>
+        <div id="item5" class="border d-flex flex-row ">item5</div>
+        <div id="item6" class="border d-flex flex-row ">item6</div>
+        <div id="item7" class="border d-flex flex-row ">item7</div>
+        <div id="item8" class="border d-flex flex-row ">item8</div>
+        <div id="item9" class="border d-flex flex-row ">item9</div>
+      </div>
+    </div>
     <!-- Footer -->
     <br>
     <footer class="border d-flex flex-row justify-content-evenly" style="max-height: 80px;">
